src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    group: io.obsidian
    project: generator-backend
    provider: fabric8
    version: 1.0.0-SNAPSHOT
  name: generator-backend
spec:
  ports:
  - name: http
    nodePort:
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    group: io.obsidian
    project: generator-backend
    provider: fabric8
  sessionAffinity: None
  type: LoadBalancer
