src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: generator-backend
  labels:
    app: generator-backend
spec:
  to:
    kind: Service
    name: generator-backend
